2010-01-07  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Misc syntax error.

2010-01-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Add errback for authentication failure

2010-01-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Check if it's a known exception against the exception type

2010-01-05  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Use custom Site in porter to log requests

2010-01-05  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Register mountpoint prefix in porter, instead of path.

2010-01-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Fix typo in mount point assignment

2010-01-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Don't use len(), getClients() already returns an integer

2009-12-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_resource.py:
	* flumotion/test/test_resource.py (added):
	Added test suite for HTTPLiveStreamingResource

2009-12-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Return a HTTP Forbiden error when the request is out of the mountpoint

2009-12-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	* env.in:
	Add FLU_PROJECT_PATH for test components
	* flumotion/test/test_hls_ring.py:
	* flumotion/test/test_ts_segmenter.py:
	Fix imports namespace

2009-12-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_hls_ring.py:
	* flumotion/test/test_mpegts.py:
	* flumotion/test/test_ts_segmenter.py:
	Revert r26165
