@@ -1,3 +1,8 @@
+2010-01-02  Marc-André Lureau  <mlureau@flumotion.com>
+
+	* flumotion/component/consumers/applestreamer/resources.py:
+	Handle "fragment not found" exceptions correctly.
+
 2010-01-07  Marc-André Lureau  <mlureau@flumotion.com>
 
 	* flumotion/component/consumers/applestreamer/resources.py:
